deployments/kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awecloud-signaling-server
  namespace: beagle-access
  labels:
    app: awecloud-signaling-server
spec:
  type: ClusterIP
  ports:
  - name: frp
    port: 7000
    targetPort: 7000
    protocol: TCP
    appProtocol: websocket
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
    appProtocol: http2
  selector:
    app: awecloud-signaling-server
